feat: idp agnositic user-calendar endpoint. With google impl (#240)
- Get calendar list endpoint
- Refactor endpoint configuration to further reuse code
- Refactor Base Stores to extract code to a superclass named BaseStore.
- Introduce ts-pattern to be able to do pattern matching especially on
IdpName so we can avoid a million ifs around the codebase.
- Refactor Google classes to be able to reuse the way we authenticate
against Google.

Assurances:
 - manually tested on Localstack and locally.
  - plus implemented unit tests

---------
